# Is-It-Rain

./: .dockerignore  .gitignore  CLEAN_DEPLOYMENT_GUIDE.md  COMPLETE_GUIDE.md  CONTRIBUTING.md  CORS_FIX_QUICKSTART.md  DATA_ACCURACY_EXPLANATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.README.md  Dockerfile.fly  Dockerfile.frontend.fly  ENHANCED_NASA_DATA_GUIDE.md  FLYIO_DEPLOYMENT_GUIDE.md  FLYIO_QUICK_COMMANDS.md  IMPORTANT_POETRY_UPDATE.md  ISSUE_RESOLUTION.md  LICENSE  ML_ARCHITECTURE.md  ML_IMPLEMENTATION_SUMMARY.md  ML_QUICKSTART.md  POETRY_V2_FIX.md  PRODUCTION_STATUS.md  PROJECT_SUMMARY.md  Procfile  RAILWAY_BACKEND_FIX.md  RAILWAY_FIX_COMPLETE.md  RAILWAY_HEALTH_CHECK_FIX.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_QUICKSTART.md  SIMPLE_DEPLOYMENT.md  build.sh  fly.backend.toml  fly.frontend.toml  netlify.toml  nixpacks.toml  railway.json  (+2 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: cache.py  config.py  database.py  rate_limit.py
backend/app/models/: forecast.py
backend/app/scripts/: __init__.py  train_model.py
backend/app/services/: ensemble_forecaster.py  geocoding.py  ml_predictor.py  nasa_power.py
backend/data/: forecasts.db
backend/data/ml_models/: feature_scaler.joblib  precipitation_model.joblib
backend/tests/: test_api.py  test_nasa_power.py
data/: README.md  sample_imerg.json
docs/: API.md  DATASETS.md  DEPLOYMENT.md  QUICKSTART.md  TROUBLESHOOTING.md  architecture.md
frontend/: .eslintrc.cjs  (+5 more)
(+10 files in other folders)
