[tool.poetry]
name = "is-it-rain-backend"
version = "0.1.0"
description = "API server for the Will It Rain On My Parade challenge"
authors = ["Space Apps Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
pydantic-settings = "^2.3.0"
cachetools = "^5.4.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
httpx = { extras = ["http2"], version = "^0.27.0" }
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
